--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <meta name="viewport" content="width=h1, initial-scale=1.0">;
     <title>Ian Mwangi</title>
 </head>
 <body>
-    <h1>Code Challenge 1</h1>
     <script src="Net.js"></script>
     <script src="speed.js"></script>
     <script src="Grade.js"></script>
